--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title} 
+  p
+    a(href="/articles")= "Articles"
+  p
+    a(href="/articles/add")= "New Articles"
